// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Report > colors diff rich text with the semantic token provider > ANSI diff 1`] = `
"Invalid import
   [38;5;246m╭─[[39mexample.ts:1:1[38;5;246m][39m
   [38;5;246m│[39m
 [38;5;246m1 │[39m value
 [38;5;246m  ·[39m ──┬──  
 [38;5;246m  ·[39m   ╰─ Suggested fix:
 [38;5;246m  ·[39m      [48;5;224m- [49m[38;5;68m[48;5;224mimport[39m[49m[48;5;224m [49m[38;5;68m[48;5;217mtype[39m[49m[48;5;217m [49m[48;5;224m{ Option } from 'std';[49m
 [38;5;246m  ·[39m      [48;5;194m+ [49m[38;5;68m[48;5;194mimport[39m[49m[48;5;194m { Option } from 'std';[49m
[38;5;246m───╯[39m
"
`;

exports[`Report > colors diff rich text with the semantic token provider > plain diff 1`] = `
"Invalid import
   ╭─[example.ts:1:1]
   │
 1 │ value
   · ──┬──  
   ·   ╰─ Suggested fix:
   ·      - import type { Option } from 'std';
   ·      + import { Option } from 'std';
───╯
"
`;

exports[`Report > colors diff rich text with the semantic token provider 1`] = `
[
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "import",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": " ",
  },
  {
    "background": {
      "index": 217,
      "kind": "ansi256",
    },
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "type",
  },
  {
    "background": {
      "index": 217,
      "kind": "ansi256",
    },
    "text": " ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "{ Option } from 'std';",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "import",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": " { Option } from 'std';",
  },
]
`;

exports[`Report > colors diff rich text with the semantic token provider 2`] = `
[
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "import",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": " ",
  },
  {
    "background": {
      "index": 217,
      "kind": "ansi256",
    },
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "type",
  },
  {
    "background": {
      "index": 217,
      "kind": "ansi256",
    },
    "text": " ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "{ Option } from 'std';",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "import",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": " { Option } from 'std';",
  },
]
`;

exports[`Report > keeps context lines inside a multiline label 1`] = `
"hey!
   ╭─[example.ts:3:3]
   │
 1 │ ╭─▶ function main() {
 2 │ │     // context
 3 │ │     throw new Error("hey!")
   · │     ─────  
   · │            
 4 │ ╰─▶ }
───╯
"
`;

exports[`Report > renders a multiline label and note 1`] = `
"Invalid expression
   ╭─[example.ts:1:1]
   │
 1 │ ╭─▶ const value = {
 2 │ │     left: 1,
   · │           ┬  
   · │           ╰─ This is a number
 3 │ │     right: "1",
   · │            ─┬─  
   · │             ╰─ This is a string
 4 │ ├─▶ }
   · │       
   · ╰────── Fields use incompatible types
   ·         Compare left and right values
   ·     
   ·     Note: Object fields must agree
───╯
"
`;

exports[`Report > renders an inline label 1`] = `
"Invalid expression
   ╭─[example.ts:1:1]
   │
 1 │ const answer = false
   ·                ──┬──  
   ·                  ╰─ Expected a number
───╯
"
`;

exports[`Report > renders rich text backgrounds > ANSI background 1`] = `"[38;5;68m[48;5;224mimport[39m[49m"`;

exports[`Report > renders rich text backgrounds > HTML background 1`] = `"<pre style="color-scheme: light dark; color: light-dark(#000000, #d4d4d4)"><span data-token-type="keyword" data-token-modifiers="" style="color: light-dark(#0000ff, #569cd6); background-color: #ffd7d7">import</span></pre>"`;

exports[`Report > renders rich text backgrounds > plain background 1`] = `"import"`;

exports[`Report > requests ranged semantic tokens for the laid out lines 1`] = `
[
  {
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "keyword",
    },
    "text": "const",
  },
  {
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "variable",
    },
    "text": "value",
  },
  {
    "semanticToken": {
      "tokenModifiers": [],
      "tokenType": "number",
    },
    "text": "1",
  },
]
`;

exports[`Report > serializes layout IR and renders every backend > ANSI 1`] = `
"Incompatible types ]8;;https://example.com/error?code=3\\[38;5;252m[docs][39m]8;;\\
   [38;5;246m╭─[[39m]8;;https://example.com/source/sample.tao#L2\\[38;5;173msample.tao:2:11[39m]8;;\\[38;5;246m][39m
   [38;5;246m│[39m
 [38;5;246m1 │[39m ╭─▶ [38;5;68m[2mdef[22m[39m[38;5;249m [39m[38;5;153m[2mfive[22m[39m[38;5;249m = [39m[38;5;68mmatch[39m () [38;5;68min[39m {
 [38;5;246m2 │[39m │       () => [38;5;151m5[39m,
 [38;5;246m  ·[39m │             ┬  
 [38;5;246m  ·[39m │             ╰─ This is of type [38;5;79mNat[39m
 [38;5;246m3 │[39m │       () => [38;5;173m"5"[39m,
 [38;5;246m  ·[39m │             ─┬─  
 [38;5;246m  ·[39m │              ╰─ This is of type [38;5;79mStr[39m
 [38;5;246m4 │[39m ├─▶ }
 [38;5;246m  ·[39m │       
 [38;5;246m  ·[39m ╰───── The values are outputs of this match expression.
 [38;5;246m  ·[39m        Call stack:
 [38;5;246m  ·[39m            ]8;;https://example.com/source/sample.tao#L2\\[38;5;173msample.tao:2:11[39m]8;;\\
 [38;5;246m  ·[39m            <main>
 [38;5;246m  ·[39m     
 [38;5;246m  ·[39m     [38;5;115mNote[39m: Outputs of match expressions must coerce to the same type
[38;5;246m───╯[39m
"
`;

exports[`Report > serializes layout IR and renders every backend > IR 1`] = `
{
  "maxWidth": 100,
  "spans": [
    {
      "text": "Incompatible types ",
    },
    {
      "link": "https://example.com/error?code=3",
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "text",
      },
      "text": "[docs]",
    },
    {
      "text": "
   ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "╭─[",
    },
    {
      "link": "https://example.com/source/sample.tao#L2",
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "string",
      },
      "text": "sample.tao:2:11",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "]",
    },
    {
      "text": "
   ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "│",
    },
    {
      "text": "
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "1 │",
    },
    {
      "text": " ╭─▶ ",
    },
    {
      "foreground": {
        "index": 249,
        "kind": "ansi256",
      },
      "semanticToken": {
        "tokenModifiers": [
          "unquoted",
        ],
        "tokenType": "keyword",
      },
      "text": "def",
    },
    {
      "foreground": {
        "index": 249,
        "kind": "ansi256",
      },
      "text": " ",
    },
    {
      "foreground": {
        "index": 249,
        "kind": "ansi256",
      },
      "semanticToken": {
        "tokenModifiers": [
          "declaration",
          "unquoted",
        ],
        "tokenType": "variable",
      },
      "text": "five",
    },
    {
      "foreground": {
        "index": 249,
        "kind": "ansi256",
      },
      "text": " = ",
    },
    {
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "keyword",
      },
      "text": "match",
    },
    {
      "text": " () ",
    },
    {
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "keyword",
      },
      "text": "in",
    },
    {
      "text": " {
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "2 │",
    },
    {
      "text": " │       () => ",
    },
    {
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "number",
      },
      "text": "5",
    },
    {
      "text": ",
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": " │             ┬  
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": " │             ╰─ This is of type ",
    },
    {
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "type",
      },
      "text": "Nat",
    },
    {
      "text": "
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "3 │",
    },
    {
      "text": " │       () => ",
    },
    {
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "string",
      },
      "text": ""5"",
    },
    {
      "text": ",
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": " │             ─┬─  
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": " │              ╰─ This is of type ",
    },
    {
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "type",
      },
      "text": "Str",
    },
    {
      "text": "
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "4 │",
    },
    {
      "text": " ├─▶ }
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": " │       
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": " ╰───── The values are outputs of this match expression.
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": "        Call stack:
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": "            ",
    },
    {
      "link": "https://example.com/source/sample.tao#L2",
      "semanticToken": {
        "tokenModifiers": [],
        "tokenType": "string",
      },
      "text": "sample.tao:2:11",
    },
    {
      "text": "
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": "            <main>
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": "     
 ",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "  ·",
    },
    {
      "text": "     ",
    },
    {
      "foreground": {
        "index": 115,
        "kind": "ansi256",
      },
      "text": "Note",
    },
    {
      "text": ": Outputs of match expressions must coerce to the same type
",
    },
    {
      "foreground": {
        "index": 246,
        "kind": "ansi256",
      },
      "text": "───╯",
    },
    {
      "text": "
",
    },
  ],
  "version": 1,
}
`;

exports[`Report > serializes layout IR and renders every backend > LSP semantic token defaults 1`] = `
{
  "semanticTokenModifiers": [
    "declaration",
    "definition",
    "readonly",
    "static",
    "deprecated",
    "abstract",
    "async",
    "modification",
    "documentation",
    "defaultLibrary",
    "unquoted",
  ],
  "semanticTokenTypes": [
    "namespace",
    "type",
    "class",
    "enum",
    "interface",
    "struct",
    "typeParameter",
    "parameter",
    "variable",
    "property",
    "enumMember",
    "event",
    "function",
    "method",
    "macro",
    "keyword",
    "modifier",
    "comment",
    "string",
    "number",
    "regexp",
    "operator",
    "decorator",
    "label",
    "error",
    "warning",
    "advice",
  ],
}
`;

exports[`Report > serializes layout IR and renders every backend > plain 1`] = `
"Incompatible types [docs]
   ╭─[sample.tao:2:11]
   │
 1 │ ╭─▶ def five = match () in {
 2 │ │       () => 5,
   · │             ┬  
   · │             ╰─ This is of type Nat
 3 │ │       () => "5",
   · │             ─┬─  
   · │              ╰─ This is of type Str
 4 │ ├─▶ }
   · │       
   · ╰───── The values are outputs of this match expression.
   ·        Call stack:
   ·            sample.tao:2:11
   ·            <main>
   ·     
   ·     Note: Outputs of match expressions must coerce to the same type
───╯
"
`;

exports[`Report > uses deeper backgrounds for indented multiline inserted and deleted diff text > text 1`] = `
"- start
-   removed line
-   shared
- end
+ start
+   shared
+   inserted line
+ end"
`;

exports[`Report > uses deeper backgrounds for indented multiline inserted and deleted diff text 1`] = `
[
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "start
",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 217,
      "kind": "ansi256",
    },
    "text": "  removed line
",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "  shared
",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "end",
  },
  {
    "text": "
",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "start
",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "  shared
",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 157,
      "kind": "ansi256",
    },
    "text": "  inserted line
",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "end",
  },
]
`;

exports[`Report > uses deeper backgrounds for substituted diff text 1`] = `
[
  {
    "background": {
      "index": 224,
      "kind": "ansi256",
    },
    "text": "- ",
  },
  {
    "background": {
      "index": 217,
      "kind": "ansi256",
    },
    "text": "old",
  },
  {
    "text": "
",
  },
  {
    "background": {
      "index": 194,
      "kind": "ansi256",
    },
    "text": "+ ",
  },
  {
    "background": {
      "index": 157,
      "kind": "ansi256",
    },
    "text": "new",
  },
]
`;

exports[`Report > wraps annotation text within maxWidth 1`] = `
"A declaration has an incompatible
value
   ╭─[example.ts:1:1]
   │
 1 │ const value = 1
   · ─┬─────────  
   ·  ╰─ This annotation is
   ·     deliberately long enough to
   ·     wrap
   · 
   · Note: This note also wraps
   ·       instead of exceeding the
   ·       layout width
───╯
"
`;
